Fix: Label alignment

--- a/src/FloatingLabel.css
+++ b/src/FloatingLabel.css
@@ -4,7 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	position: relative;
-	justify-content: flex-start;
+	justify-content: center;
 	align-items: flex-start;
 	text-align: left;
 }
@@ -14,14 +14,13 @@
 	color: #495057;
 	pointer-events: none;
 	position: absolute;
-	transform: translate(0, 50%) scale(1);
 	transform-origin: top left;
 	transition: all 0.2s ease-out;
 	padding-left: 1rem;
 }
 
 .floating-label:focus-within label, .floating-label .floating-label-active {
-	transform: translate(0, 12.5%) scale(0.6);
+	transform: translate(0, -50%) scale(0.6);
 }
 
 .floating-label input:focus{
@@ -35,7 +34,7 @@
 .floating-label input{
 	display: block;
 	width: 100%;
-	padding: .375rem .75rem;
+	padding: 1rem 0.75rem 0.25rem 0.75rem;
 	font-size: 1rem;
 	font-weight: 400;
 	line-height: 1.5;
